--- a/nextjs-demo2/package.json
+++ b/nextjs-demo2/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "nextjs-demo1",
+  "name": "nextjs-demo2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev --port 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.12.1",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-redux": "^9.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
