--- a/nextjs-demo2/package.json
+++ b/nextjs-demo2/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rematch/core": "^2.2.0",
     "antd": "^5.12.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.1",
+    "redux": "^5.0.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.5"
   },
