--- a/nextjs-demo2/package.json
+++ b/nextjs-demo2/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@rematch/core": "^2.2.0",
     "antd": "^5.12.1",
     "next": "14.0.3",
