--- a/nextjs-demo2/package.json
+++ b/nextjs-demo2/package.json
@@ -24,5 +24,8 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
+  },
+  "engines": {
+    "node": ">=16.8.0"
   }
 }
