--- a/nextjs-demo5/package.json
+++ b/nextjs-demo5/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
+    "@rematch/core": "^2.2.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
