--- a/nextjs-demo3/package.json
+++ b/nextjs-demo3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-demo3",
+  "name": "nextjs-demo5",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
-    "antd": "^5.12.5",
+    "@rematch/core": "^2.2.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
