--- a/nextjs-demo4/package.json
+++ b/nextjs-demo4/package.json
@@ -23,5 +23,9 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "yarn": ">=1.22.0"
   }
 }
