--- a/nextjs-demo5/package.json
+++ b/nextjs-demo5/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.18.2",
     "@ant-design/icons": "^5.2.6",
+    "@rematch/core": "^2.2.0",
     "antd": "^5.12.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.1",
     "sass": "^1.69.5"
   },
   "devDependencies": {
