--- a/nextjs-demo5/package.json
+++ b/nextjs-demo5/package.json
@@ -13,7 +13,10 @@
     "@ant-design/icons": "^5.2.6",
     "@rematch/core": "^2.2.0",
     "antd": "^5.12.5",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4",
